--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-
-    <!-- External CSS -->
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-
-    <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-    <!-- External JS -->
-    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
-
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
-
   <body>
-
     <!-- Top nav bar (fixed) -->
-    <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
-      <span class="header">Tweeter</span>
+    <nav class="navbar">
+      <img class="navbar-logo" src="/images/bird.png">
+      <span class="navbar-header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="newtweet">
+    <h2 class="newtweet-header">Compose Tweet</h2>
+    <form method="post" action="/tweets" >
+      <textarea class="newtweet-textarea" name="text" placeholder="What are you humming about?" cols="100%"></textarea>
+      <input type="submit" value="Tweet">
+      <span class="newtweet-counter">140</span>
+    </form>
+  </section>
     </main>
-
+    <script src="/vendor/jquery-2.2.3.min.js"></script>
+    <script src="/scripts/app.js"></script>
   </body>
 </html>
