Add tweet log HTML skeleton and new stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </nav>
     <main class="container">
       <section class="newtweet">
-        <h2 class="newtweet-header">Compose Tweet</h2>
+        <h1 class="newtweet-header">Compose Tweet</h1>
         <form method="post" action="/tweets" >
           <textarea class="newtweet-textarea" name="text" placeholder="What are you humming about?" cols="100%"></textarea>
           <input type="submit" value="Tweet">
@@ -21,6 +21,21 @@
         </form>
       </section>
       <section class="tweetlog">
+        <article class="tweet">
+          <header>
+            <div class="float-left">
+              <img class="tweet-avatar" src="#">
+              <h1 class="tweet-poster">Richard Tweak</h1>
+            </div>
+            <p class="tweet-handle">@tweekbros</p>
+          </header>
+            <p class="tweet-content">Drink coffeee!!!!!! #beans</p>
+          <footer>
+            <p class="tweet-age">8 yrs ago</p>
+            <!--icons-->
+          </footer/>
+        </article>
+      </section>
     </main>
 
   </body>
