Style tweet in log
Relies on non-persistent data hardcoded into index.html and mock avatar within public/images

--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,23 @@
       </section>
       <section class="tweetlog">
         <article class="tweet">
-          <header>
+          <header class="tweet-header">
             <div class="float-left">
-              <img class="tweet-avatar" src="#">
-              <h1 class="tweet-poster">Richard Tweak</h1>
+              <img class="tweet-avatar" src="/images/tweek.jpg">
+              <h2 class="tweet-poster">Richard Tweak</h1>
             </div>
             <p class="tweet-handle">@tweekbros</p>
           </header>
+          <!-- <main> ? -->
             <p class="tweet-content">Drink coffeee!!!!!! #beans</p>
-          <footer>
+            <!-- </main> ? -->
+          <footer class="tweet-footer">
             <p class="tweet-age">8 yrs ago</p>
+            <div class="tweet-icons">
+              <span class="fa fa-flag"></span>
+              <span class="fa fa-retweet"></span>
+              <span class="fa fa-heart"></span>
+            </div>
             <!--icons-->
           </footer/>
         </article>
