--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,6 @@
   <head>
     <title>Tweeter - Home Page</title>
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="/vendor/jquery-2.2.3.min.js"></script>
-    <script src="/scripts/composer-char-counter.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -20,30 +18,11 @@
           <span class="newtweet-counter">140</span>
         </form>
       </section>
-      <section class="tweetlog">
-        <article class="tweet">
-          <header class="tweet-header">
-            <div class="float-left">
-              <img class="tweet-avatar" src="/images/tweek.jpg">
-              <h2 class="tweet-poster">Richard Tweak</h1>
-            </div>
-            <p class="tweet-handle">@tweekbros</p>
-          </header>
-          <!-- <main> ? -->
-            <p class="tweet-content">Drink coffeee!!!!!! #beans</p>
-            <!-- </main> ? -->
-          <footer class="tweet-footer">
-            <p class="tweet-age">8 yrs ago</p>
-            <div class="tweet-icons">
-              <span class="fa fa-flag"></span>
-              <span class="fa fa-retweet"></span>
-              <span class="fa fa-heart"></span>
-            </div>
-            <!--icons-->
-          </footer/>
-        </article>
+      <section class="tweet-log">
       </section>
     </main>
-
+    <script src="/vendor/jquery-2.2.3.min.js"></script>
+    <script src="/scripts/composer-char-counter.js"></script>
+    <script src="/scripts/app.js"></script>
   </body>
 </html>
