AJAX and form validation implemented
POST submits data to 'database' via AJAX call. On success, calls loadTweets function to refresh the log. If guard statements before POST AJAX route check for a non-empty textarea and a tweet below the character limit.

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
     <main class="container">
       <section class="newtweet">
         <h1 class="newtweet-header">Compose Tweet</h1>
-        <form method="post" action="/tweets" >
+        <form id="create-tweet">
           <textarea class="newtweet-textarea" name="text" placeholder="What are you humming about?" cols="100%"></textarea>
-          <input type="submit" value="Tweet">
+          <button id="submit-tweet" type="submit">Tweet</button>
           <span class="newtweet-counter">140</span>
+          <p class="newtweet-flash"></p>
         </form>
       </section>
       <section class="tweet-log">
