Right-aligned compose button (no functionality)

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <nav class="navbar">
       <img class="navbar-logo" src="/images/bird.png">
       <span class="navbar-header">Tweeter</span>
+        <button class="navbar-compose">
+          <span class="fa fa-pencil-square-o"></span>
+            Compose
+        </button>
     </nav>
     <main class="container">
       <section class="newtweet">
