MongoDB and DRYing
Server modified to use MongoDB via nested module calls within .connect().
Datahelper functions use MongoDB methods to appropriately handle data prior to routing.
Server side validation added for too many character error in POST route.
CSS alphabetical.
CSS uses flexbox to center and distribute nav items.
.gitignore tmp folder for example code.

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,16 @@
   </head>
   <body>
     <nav class="navbar">
+      <div class="navbar-left">
       <img class="navbar-logo" src="/images/bird.png">
       <span class="navbar-header">Tweeter</span>
+     </div>
+     <div class="navbar-right">
         <button class="navbar-compose">
           <span class="fa fa-pencil-square-o"></span>
             Compose
         </button>
+    </div>
     </nav>
     <main class="container">
       <section class="newtweet">
