--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Tweeter - Home Page</title>
-    <link rel="stylesheet" href="/styles/main1.css">
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
     <nav class="navbar">
