Add persistent tweet like and classes (for one user)
MongoDB logic to update like count and a temporary "liked" key.
Client and server logic to update class and update MongoDB entry.
SCSS changes to indicate like persistence.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
           <p class="newtweet-flash"></p>
         </form>
       </section>
-      <section class="tweet-log">
+      <section id="tweet-log" class="tweet-log">
       </section>
     </main>
     <script src="/vendor/jquery-2.2.3.min.js"></script>
